Fix cut off text in popular posts.

--- a/app/assets/stylesheets/views/homepage.css
+++ b/app/assets/stylesheets/views/homepage.css
@@ -147,9 +147,8 @@ h3.section-title {
   float: left;
   padding-left: 15px;
   line-height: 1.2em;
-  height: 100px;
+  height: 120px;
   width: 450px;
-  margin-bottom: 15px;
   overflow: hidden;
 }
 .popular-post-triplet-1-image-thumbnail {
